Move instructions up to avoid overlap with border

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -564,7 +564,7 @@ body #grid * {
         font-size: 8px;
         font-weight: 300;
         position: relative;
-        top: -10px;
+        top: -12px;
         left: 4px;
         font-style: italic;
       }
